feat: 主页面英文文案兼容

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,54 @@
 {
-  "title":"title"
+  "Self-built application credentials called successfully": "Self-built application credentials called successfully",
+  "app_id or app_secret error": "App_Id or App_Secret error, please check and try again!",
+  "Successful query": "Successful query",
+  "Deleted successfully": "Deleted successfully",
+  "Please keep at least one view": "Please keep at least one view!",
+  "Please check View first": "Please check View first!",
+  "Batch Delete Success": "Batch Delete Success",
+  "The view name already exists": "The view name already exists, please re-enter it!",
+  "Synchronization Configuration Successful": "Synchronization Configuration Successful",
+  "Are you sure to synchronize the current view fields explicitly and implicitly to all views": "Are you sure to synchronize the current view fields explicitly and implicitly to all views?",
+  "Synchronize all view field hides": "Synchronize All View Field Hides",
+  "tips": "Tips: Use your own app to easily filter your personal views with the Personal View mode.",
+  "Usage Mode": "Use Mode:",
+  "normal view": "Normal View",
+  "personal view": "Personal View",
+  "Add View": "Add View",
+  "Fill out the self-build application credentials": "Fill out the self-build application credentials",
+  "Operating Guidelines": "Operating Guidelines",
+  "Please enter App ID": "Please enter App ID",
+  "Please enter App Secret": "Please enter App Secret",
+  "Confirm": "Confirm",
+  "Cancel": "Cancel",
+  "View range": "View Range:",
+  "Please select the view range": "Please select the view range",
+  "View Name": "View Name:",
+  "Please enter a view name": "Please enter a view name",
+  "View type": "View Type:",
+  "Please select the view type": "Please select the view type",
+  "Search": "Search",
+  "Reset": "Reset",
+  "view name1": "View Name",
+  "operation": "Operate",
+  "batch deletion": "Batch Deletion",
+  "Batch configure field hiding": "Batch Configure Field Hiding",
+  "format error": "Format Error",
+  "Back to the first data table": "Back to the first data table",
+  "Full view": "Full view",
+  "table view": "Table view",
+  "Kanban view": "Kanban view",
+  "form view": "Form view",
+  "Album view": "Album view",
+  "Gantt view": "Gantt view",
+  "calendar view": "Calendar view",
+  "Full Role View Scope": "Full Role View Scope",
+  "Personal view for administrators": "Personal view for administrators",
+  "Non-administrator personal view": "Non-administrator personal view",
+  "total number": "Total: {0} Size",
+  "selected": "Selected: {0} Size",
+  "Confirm deletion of the selected": "Confirm deletion of the selected {0} size views?",
+  "Loading": "Loading...",
+  "Please select the data table format": "Please select the data table format!",
+  "no data": "No Data"
 }
