--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,3 +1,54 @@
 {
-  "title":"标题"
+  "Self-built application credentials called successfully": "自建应用凭证调用成功",
+  "app_id or app_secret error": "app_id 或 app_secret 错误, 请检查后重试!",
+  "Successful query": "查询成功",
+  "Deleted successfully": "删除成功",
+  "Please keep at least one view": "请至少保留一个视图！",
+  "Please check View first": "请先勾选视图！",
+  "Batch Delete Success": "批量删除成功",
+  "The view name already exists": "视图名字已存在,请重新输入！",
+  "Synchronization Configuration Successful": "同步配置成功",
+  "Are you sure to synchronize the current view fields explicitly and implicitly to all views": "确认把当前视图字段显隐同步至所有视图吗?",
+  "Synchronize all view field hides": "同步所有视图字段显隐",
+  "tips": "Tips: 使用自建应用, 通过个人视图模式轻松筛选个人视图",
+  "Usage Mode": "使用模式:",
+  "normal view": "普通视图",
+  "personal view": "个人视图",
+  "Add View": "新增视图",
+  "Fill out the self-build application credentials": "填写自建应用凭证",
+  "Operating Guidelines": "操作指引",
+  "Please enter App ID": "请输入 App ID",
+  "Please enter App Secret": "请输入 App Secret",
+  "Confirm": "确认",
+  "Cancel": "取消",
+  "View range": "视图范围:",
+  "Please select the view range": "请选择视图范围",
+  "View Name": "视图名字:",
+  "Please enter a view name": "请输入视图名字",
+  "View type": "视图类型:",
+  "Please select the view type": "请选择视图类型",
+  "Search": "查询",
+  "Reset": "重置",
+  "view name1": "视图名字",
+  "operation": "操作",
+  "batch deletion": "批量删除",
+  "Batch configure field hiding": "批量配置字段显隐",
+  "format error": "格式错误",
+  "Back to the first data table": "回到第一个数据表",
+  "Full view": "全部视图",
+  "table view": "表格视图",
+  "Kanban view": "看板视图",
+  "form view": "表单视图",
+  "Album view": "画册视图",
+  "Gantt view": "甘特视图",
+  "calendar view": "日历视图",
+  "Full Role View Scope": "全部角色视图范围",
+  "Personal view for administrators": "管理员的个人视图",
+  "Non-administrator personal view": "非管理员个人视图",
+  "total number": "总数: {0} 个",
+  "selected": "已选: {0} 个",
+  "Confirm deletion of the selected": "确认删除所选的 {0} 个视图吗?",
+  "Loading": "加载中...",
+  "Please select the data table format": "请选择数据表格式!",
+  "no data": "暂无数据"
 }
