feat: 批量配置字段显隐英文文案

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
   "Successful query": "Successful query",
   "Deleted successfully": "Deleted successfully",
   "Please keep at least one view": "Please keep at least one view!",
-  "Please check View first": "Please check View first!",
+  "Please check View first": "Please Check View First!",
   "Batch Delete Success": "Batch Delete Success",
   "The view name already exists": "The view name already exists, please re-enter it!",
   "Synchronization Configuration Successful": "Synchronization Configuration Successful",
@@ -24,7 +24,7 @@
   "View range": "View Range:",
   "Please select the view range": "Please select the view range",
   "View Name": "View Name:",
-  "Please enter a view name": "Please enter a view name",
+  "Please enter a view name": "Please Enter a View Name",
   "View type": "View Type:",
   "Please select the view type": "Please select the view type",
   "Search": "Search",
@@ -32,16 +32,16 @@
   "view name1": "View Name",
   "operation": "Operate",
   "batch deletion": "Batch Deletion",
-  "Batch configure field hiding": "Batch Configure Field Hiding",
+  "Batch configure field hiding": "Batch Configure Field Hides",
   "format error": "Format Error",
   "Back to the first data table": "Back to the first data table",
-  "Full view": "Full view",
-  "table view": "Table view",
-  "Kanban view": "Kanban view",
-  "form view": "Form view",
-  "Album view": "Album view",
-  "Gantt view": "Gantt view",
-  "calendar view": "Calendar view",
+  "Full view": "Full View",
+  "table view": "Table View",
+  "Kanban view": "Kanban View",
+  "form view": "Form View",
+  "Album view": "Album View",
+  "Gantt view": "Gantt View",
+  "calendar view": "Calendar View",
   "Full Role View Scope": "Full Role View Scope",
   "Personal view for administrators": "Personal view for administrators",
   "Non-administrator personal view": "Non-administrator personal view",
@@ -50,5 +50,13 @@
   "Confirm deletion of the selected": "Confirm deletion of the selected {0} size views?",
   "Loading": "Loading...",
   "Please select the data table format": "Please select the data table format!",
-  "no data": "No Data"
+  "no data": "No Data",
+  "Field Configuration Successful": "Field Configuration Successful",
+  "Please check the fields first": "Please check the fields first",
+  "Batch Display Configuration Success": "Batch Display Configuration Success",
+  "Batch Hide Configuration Successful": "Batch Hide Configuration Successful",
+  "Cloese": "Close",
+  "field name": "Field Name",
+  "batch display": "Batch Display",
+  "Batch hide": "Batch Hide"
 }
