feat: 新增视图的英文文案处理

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,9 @@
 {
   "Self-built application credentials called successfully": "Self-built application credentials called successfully",
   "app_id or app_secret error": "App_Id or App_Secret error, please check and try again!",
-  "Successful query": "Successful query",
+  "Successful query": "Successful Query",
   "Deleted successfully": "Deleted successfully",
-  "Please keep at least one view": "Please keep at least one view!",
+  "Please keep at least one view": "Please Keep at Least One View!",
   "Please check View first": "Please Check View First!",
   "Batch Delete Success": "Batch Delete Success",
   "The view name already exists": "The view name already exists, please re-enter it!",
@@ -43,8 +43,8 @@
   "Gantt view": "Gantt View",
   "calendar view": "Calendar View",
   "Full Role View Scope": "Full Role View Scope",
-  "Personal view for administrators": "Personal view for administrators",
-  "Non-administrator personal view": "Non-administrator personal view",
+  "Personal view for administrators": "Personal View for Administrators",
+  "Non-administrator personal view": "Non-administrator Personal View",
   "total number": "Total: {0} Size",
   "selected": "Selected: {0} Size",
   "Confirm deletion of the selected": "Confirm deletion of the selected {0} size views?",
@@ -58,5 +58,30 @@
   "Cloese": "Close",
   "field name": "Field Name",
   "batch display": "Batch Display",
-  "Batch hide": "Batch Hide"
+  "Batch hide": "Batch Hide",
+  "Added successfully": "Add Successfully",
+  "Is it synchronized to everyone": "Is it synchronized to everyone",
+  "Field Configuration": "Field Configuration",
+  "Add condition": "Add Condition",
+  "Setting Sort Criteria": "Setting Sort Criteria",
+  "Setting grouping conditions": "Setting Grouping Conditions",
+  "condition": "Condition",
+  "all": "All",
+  "any": "Any",
+  "Meets the following": "Meets the following",
+  "Setting Filter Criteria": "Setting Filter Criteria",
+  "Order of options": "Order of options",
+  "Options in reverse order": "Options in reverse order",
+  "Please enter": "Please enter {0}",
+  "Please select": "Please select {0}",
+  "equal": "Equal",
+  "not equal": "Not Equal",
+  "include": "Include",
+  "exclude": "Exclude",
+  "empty": "Empty",
+  "not empty": "Not Empty",
+  "more than": "More Than",
+  "less than": "Less Than",
+  "Less than or equal to": "Less Than or Equal ",
+  "greater than or equal to": "Greater Than or Equal"
 }
