--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -6,7 +6,7 @@
   "Please keep at least one view": "请至少保留一个视图！",
   "Please check View first": "请先勾选视图！",
   "Batch Delete Success": "批量删除成功",
-  "The view name already exists": "视图名字已存在,请重新输入！",
+  "The view name already exists": "视图名字已存在，请重新输入！",
   "Synchronization Configuration Successful": "同步配置成功",
   "Are you sure to synchronize the current view fields explicitly and implicitly to all views": "确认把当前视图字段显隐同步至所有视图吗?",
   "Synchronize all view field hides": "同步所有视图字段显隐",
@@ -58,5 +58,30 @@
   "Close": "关闭",
   "field name": "字段名字",
   "batch display": "批量显示",
-  "Batch hide": "批量隐藏"
+  "Batch hide": "批量隐藏",
+  "Added successfully": "新增成功",
+  "Is it synchronized to everyone": "是否同步给所有人",
+  "Field Configuration": "字段配置",
+  "Add condition": "添加条件",
+  "Setting Sort Criteria": "设置排序条件",
+  "Setting grouping conditions": "设置分组条件",
+  "condition": "条件",
+  "all": "所有",
+  "any": "任一",
+  "Meets the following": "符合以下",
+  "Setting Filter Criteria": "设置筛选条件",
+  "Order of options": "选项顺序",
+  "Options in reverse order": "选项倒序",
+  "Please enter": "请输入{0}",
+  "Please select": "请选择{0}",
+  "equal": "等于",
+  "not equal": "不等于",
+  "include": "包含",
+  "exclude": "不包含",
+  "empty": "为空",
+  "not empty": "不为空",
+  "more than": "大于",
+  "greater than or equal to": "大于或等于",
+  "less than": "小于",
+  "Less than or equal to": "小于或等于"
 }
