--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,5 +99,5 @@
   "high": "Tall",
   "Super High": "Extra Tall",
   "Low": "Short",
-  "addFieldOnlyShowActiveView": "Add field show only current view:"
+  "addFieldOnlyShowActiveView": "Add field show only current view"
 }
