--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -99,5 +99,5 @@
   "medium": "中等",
   "high": "高",
   "Super High": "超高",
-  "addFieldOnlyShowActiveView": "新增字段仅显示于当前视图："
+  "addFieldOnlyShowActiveView": "新增字段仅显示于当前视图"
 }
