--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,7 +32,7 @@
   "view name1": "View Name",
   "operation": "Operate",
   "batch deletion": "Batch Deletion",
-  "Batch configure field hiding": "Batch Configure Field Hides",
+  "Batch configure field hiding": "Batch Field Hide",
   "format error": "Format Error",
   "Back to the first data table": "Back to the first data table",
   "Full view": "Full View",
