--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -46,7 +46,7 @@
   "Personal view for administrators": "管理员的个人视图",
   "Non-administrator personal view": "非管理员个人视图",
   "total number": "总数: {0} 个",
-  "selected": "已选: {0} 个",
+  "selected": "已选：",
   "Confirm deletion of the selected": "确认删除所选的 {0} 个视图吗?",
   "Loading": "加载中...",
   "Please select the data table format": "请选择数据表格式!",
